--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "mysql2": "^2.0.2",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.3"
   }
