--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.3.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
+    "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
