--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "stripe": "^7.15.0"
   }
 }
