--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "author": "ArashRabiee",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
+    "helmet": "^3.21.2",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "multer": "^1.4.2",
