--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "SET NODE_ENV=production & MONGODB_URI=localhost:27017 & DATABASE=nodeShop & STRIPE_KEY=sk_test_W9oS28nCnMTlDVyYpauSJlCq0022E5cSyd & node app.js",
+    "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
   "author": "ArashRabiee",
@@ -25,6 +26,7 @@
     "helmet": "^3.21.2",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
